--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 NODE_ENV = development
 PORT = 8001
 HOST_NAME = localhost
+
+# database env
+DB_HOST = localhost
+DB_PORT = 3307
+DB_USER = root
+DB_DATABASE = my_database
+DB_PASSWORD = 123456
