--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ PORT = 8001
 HOST_NAME = localhost
 
 # database env
-DB_HOST = localhost
+DB_HOST = mongodb://localhost:27018
 DB_PORT = 3307
 DB_USER = root
-DB_DATABASE = my_database
+DB_DATABASE = mongoBD
 DB_PASSWORD = 123456
