--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ HOST_NAME = localhost
 
 # database env
 DB_HOST = mongodb://localhost:27018
+DB_HOST_MONGODBDRIVER = mongodb://root:123456@localhost:27018/?authSource=admin
 DB_PORT = 3307
 DB_USER = root
 DB_DATABASE = mongoBD
