--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "1.4.0",
+    "mongodb": "4.13.0",
     "mongoose": "6.7.2",
     "mongoose-delete": "0.5.4",
     "mysql2": "^3.6.5"
