--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   },
   "homepage": "https://github.com/AnNinh2605/Express---NodeJs#readme",
   "dependencies": {
-    "api-query-params": "5.4.0",
+    "api-query-params": "^5.4.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "1.4.0",
     "mongodb": "4.13.0",
-    "mongoose": "6.7.2",
+    "mongoose": "^6.12.6",
     "mongoose-delete": "0.5.4",
     "mysql2": "^3.6.5"
   },
