--- a/.env
+++ b/.env
@@ -2,10 +2,19 @@ NODE_ENV = development
 PORT = 8001
 HOST_NAME = localhost
 
-# database env
-DB_HOST = mongodb://localhost:27018
+# # database env
+# DB_HOST = mongodb://localhost:27018
+# DB_HOST_MONGODBDRIVER = mongodb://root:123456@localhost:27018/?authSource=admin
+# DB_PORT = 3307
+# DB_USER = root
+# DB_DATABASE = mongoBD
+# DB_PASSWORD = 123456
+
+
+# mongodb CLoud
+DB_HOST = mongodb+srv://root:Bogf9BhrHp9KkWSX@cluster0.cchk076.mongodb.net/?retryWrites=true&w=majority
 DB_HOST_MONGODBDRIVER = mongodb://root:123456@localhost:27018/?authSource=admin
 DB_PORT = 3307
 DB_USER = root
 DB_DATABASE = mongoBD
-DB_PASSWORD = 123456
+DB_PASSWORD = Bogf9BhrHp9KkWSX
