--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "1.4.0",
+    "joi": "17.7.0",
     "mongodb": "4.13.0",
     "mongoose": "^6.12.6",
     "mongoose-delete": "0.5.4",
