--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ HOST_NAME = localhost
 
 # mongodb CLoud
 DB_HOST = mongodb+srv://root:Bogf9BhrHp9KkWSX@cluster0.cchk076.mongodb.net/?retryWrites=true&w=majority
-DB_HOST_MONGODBDRIVER = mongodb://root:123456@localhost:27018/?authSource=admin
+# DB_HOST_MONGODBDRIVER = mongodb://root:123456@localhost:27018/?authSource=admin
 DB_PORT = 3307
 DB_USER = root
 DB_PASSWORD = Bogf9BhrHp9KkWSX
