<style> remove empty line, unused code

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
+#  frontend interface localhost
 NODE_ENV = development
 PORT = 8001
 HOST_NAME = localhost
 
-# # database env
+# # localhost database + mongoDBdriver 
 # DB_HOST = mongodb://localhost:27018
 # DB_HOST_MONGODBDRIVER = mongodb://root:123456@localhost:27018/?authSource=admin
 # DB_PORT = 3307
@@ -11,9 +12,8 @@ HOST_NAME = localhost
 # DB_PASSWORD = 123456
 
 
-# mongodb CLoud
+# mongodb CLoud database + render
 DB_HOST = mongodb+srv://root:Bogf9BhrHp9KkWSX@cluster0.cchk076.mongodb.net/?retryWrites=true&w=majority
-# DB_HOST_MONGODBDRIVER = mongodb://root:123456@localhost:27018/?authSource=admin
 DB_PORT = 3307
 DB_USER = root
 DB_PASSWORD = Bogf9BhrHp9KkWSX
