--- a/.env
+++ b/.env
@@ -4,17 +4,17 @@ PORT = 8001
 HOST_NAME = localhost
 
 # localhost database + mongoDBdriver 
-DB_HOST = mongodb://localhost:27018
-DB_HOST_MONGODBDRIVER = mongodb://root:123456@localhost:27018/?authSource=admin
-DB_PORT = 3307
-DB_USER = root
-DB_DATABASE = mongoBD
-DB_PASSWORD = 123456
-
-
-# # mongodb CLoud database + render
-# DB_HOST = mongodb+srv://root:Bogf9BhrHp9KkWSX@cluster0.cchk076.mongodb.net/?retryWrites=true&w=majority
+# DB_HOST = mongodb://localhost:27018
+# DB_HOST_MONGODBDRIVER = mongodb://root:123456@localhost:27018/?authSource=admin
 # DB_PORT = 3307
 # DB_USER = root
-# DB_PASSWORD = Bogf9BhrHp9KkWSX
 # DB_DATABASE = mongoBD
+# DB_PASSWORD = 123456
+
+
+# mongodb CLoud database + render
+DB_HOST = mongodb+srv://root:Bogf9BhrHp9KkWSX@cluster0.cchk076.mongodb.net/?retryWrites=true&w=majority
+DB_PORT = 3307
+DB_USER = root
+DB_PASSWORD = Bogf9BhrHp9KkWSX
+DB_DATABASE = mongoBD
